# arkoi_chess_engine

./: .gitignore  BENCHMARK.md  Cargo.toml  INSPIRATION.md  README.md  perft_script.sh  perftsuite.epd  run_benchmarks.sh  run_lichess.sh  run_table_generator.sh  scores.md
books/UHO/: README.md
books/balsa/: README.md
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/api/src/bitboard/: bitboard.rs  constants.rs  tests.rs
crates/api/src/board/: board.rs  error.rs  mod.rs  piece.rs
crates/api/src/move/: constants.rs  move.rs
crates/api/src/square/: constants.rs  square.rs  tests.rs
crates/api/src/zobrist/: hash.rs  hasher.rs  mod.rs
crates/base/: Cargo.toml
crates/base/src/: lib.rs
crates/base/src/bitboard/: bitboard.rs  constants.rs  mod.rs
crates/base/src/board/: board.rs  error.rs  piece.rs  tests.rs
crates/base/src/move/: constants.rs  error.rs  flag.rs  mod.rs  move.rs
crates/base/src/polyglot/: error.rs  hasher.rs  mod.rs  parser.rs  tests.rs
crates/base/src/square/: error.rs  mod.rs  square.rs
crates/base/src/zobrist/: hash.rs  hasher.rs  mod.rs
crates/base/test_data/: README_PERFECT.md
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs  main.rs
crates/engine/src/evaluation/: evaluation.rs  mod.rs
crates/engine/src/generation/: error.rs  mod.rs
crates/engine/src/generator/: error.rs  generator.rs  mod.rs
crates/engine/src/generator/pieces/: bishop.rs  king.rs  knight.rs  mod.rs  pawn.rs  queen.rs  rook.rs
crates/engine/src/hashtable/: hashtable.rs  mod.rs  stats.rs  transposition.rs
crates/engine/src/hashtable/generic/: generic.rs  mod.rs  perft.rs
crates/engine/src/hashtable/transposition/: entry.rs  mod.rs  packed.rs  table.rs  tests.rs
crates/engine/src/perft/: mod.rs  perft.rs  tests.rs
crates/engine/src/search/: aspiration.rs  communication.rs  error.rs  iterative.rs  killers.rs  mod.rs  negamax.rs  quiescence.rs  search.rs  sort.rs
crates/engine/src/uci/: controller.rs  parser.rs
crates/lookup/: Cargo.toml
crates/lookup/src/: direction.rs  generic.rs  lib.rs  magic.rs  main.rs  moves.rs  tests.rs  utils.rs
crates/lookup/src/generators/: generic.rs  magic.rs  mod.rs  moves.rs
crates/lookup/src/tables/: generated.rs  mod.rs  pesto.rs  polyglot.rs
crates/lookup/src/utils/: direction.rs  mod.rs
crates/ui/: Cargo.toml
crates/ui/books/: README_PERFECT.md
crates/ui/src/: main.rs  test.rs
crates/ui/src/uci/: controller.rs  error.rs  mod.rs  parser.rs  printer.rs  prompt.rs
scripts/: engines.json  perft_script.sh  run_lichess.sh  selfplay.sh  sprt_selfplay.sh
src/: bitboard.rs  board.rs  main.rs  move_generator.rs  table_generator.rs  tables.rs  uci.rs
src/bitboard/: constants.rs  mod.rs  square.rs  squares.rs  tests.rs
src/board/: color.rs  error.rs  mod.rs  piece.rs  tests.rs  zobrist.rs
src/evaluation/: mod.rs
src/generation/: error.rs  mod.rs  mov.rs  new_gen.rs
src/hashtable/: mod.rs  perft.rs  transposition.rs
src/lookup/: magic.rs  mod.rs  pesto.rs  tables.rs  utils.rs
src/move_generator/: error.rs  mod.rs  mov.rs  tests.rs
src/perft/: mod.rs  tests.rs
src/search/: error.rs  evaluation.rs  iterative.rs  killers.rs  mod.rs  negamax.rs  quiescence.rs  sort.rs  transposition.rs
src/uci/: commands.rs  controller.rs  error.rs  mod.rs  parser.rs  tests.rs
