[package]
name = "arkoi_chess_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
thiserror = "1.0"
clap = { version = "*", features = ["derive"] }
parse-size = "*"
rand = "*"
crossbeam-channel = "0.5.11"

[profile.release]
opt-level = 3
debug = false

[profile.dev]
opt-level = 3
debug = true

[profile.test]
opt-level = 3
