[workspace]
members = [
  "crates/api",
  "crates/engine",
  "crates/lookup"
]
resolver = "2"

[workspace.package]
authors = ["Timo Behrend"]
categories = ["chess-engine", "arkoi"]
edition = "2021"
version = "0.1.0"

[profile.release]
incremental = true
opt-level = 3

[profile.dev]
incremental = true
opt-level = 3

[profile.test]
incremental = true
opt-level = 3
