[package]
name = "engine"
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../api" }

colored = "2.1.0"
thiserror = "1.0"
clap = { version = "*", features = ["derive"] }
parse-size = "*"
rand = "*"
crossbeam-channel = "0.5.11"
reedline = { version = "0.25.0", features = ["external_printer"] }
open = "*"
