[package]
name = "engine"
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../base" }

crossbeam-channel = "0.5.11"
thiserror = "1.0"
rand = "*"
