[package]
name = "lookup"
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

[lib]
name = "lookup_lib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const-random = "0.1.17"
const_for = "0.1.4"
rand = "0.8.5"
