[package]
name = "ui"
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "../engine" }

reedline = { version = "0.25.0", features = ["external_printer"] }
crossbeam-channel = "0.5.11"
open = "*"
