[package]
name = "ui"
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "../engine" }
base = { path = "../base" }

reedline = { version = "0.25.0", features = ["external_printer"] }
crossbeam-channel = "0.5.11"
thiserror = "1.0"
open = "*"
rand = "*"
